--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,8 +9,8 @@ android {
         applicationId "com.quyca.scriptwriter"
         minSdk 29
         targetSdk 31
-        versionCode 1
-        versionName "1.0"
+        versionCode 3
+        versionName "3.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -32,6 +32,7 @@ android {
 
 dependencies {
     implementation 'com.github.duanhong169:colorpicker:1.1.6'
+    testImplementation 'junit:junit:4.12'
     def preference_version = "1.1.1"
     implementation "androidx.preference:preference:$preference_version"
     implementation 'com.google.code.gson:gson:2.8.7'
