--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,7 +32,7 @@ android {
 }
 
 dependencies {
-    implementation 'com.github.duanhong169:colorpicker:1.1.6'
+    // implementation 'com.github.duanhong169:colorpicker:1.1.6'
     implementation files('libs\\STRobotManager.jar')
     testImplementation 'junit:junit:4.12'
     def preference_version = "1.1.1"
